...
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="All Tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/goToSettings"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toEndOf="@+id/goAddTaskButton"
        app:layout_constraintTop_toBottomOf="@+id/tasks"
        app:layout_constraintVertical_bias="0.18" />

    <Button
...
        android:onClick="goToSettingsActivity"
        android:text="Settings"
        app:layout_constraintBottom_toBottomOf="@+id/goAllTasksButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
